--- a/Client/index.html
+++ b/Client/index.html
@@ -14,17 +14,17 @@
     rel="stylesheet">
   <style>
     :root {
-      /* Simple Color Palette */
-      --color-primary: #2563eb;
-      --color-primary-light: #3b82f6;
-      --color-primary-dark: #1d4ed8;
-      --color-secondary: #dc2626;
-      --color-secondary-light: #ef4444;
-      --color-secondary-dark: #b91c1c;
-      --color-accent: #16a34a;
-      --color-accent-light: #22c55e;
-      --color-accent-dark: #15803d;
-      --color-background: #f9fafb;
+      /* Cool Color Palette */
+      --color-primary: #8b5cf6;
+      --color-primary-light: #a78bfa;
+      --color-primary-dark: #7c3aed;
+      --color-secondary: #14b8a6;
+      --color-secondary-light: #2dd4bf;
+      --color-secondary-dark: #0d9488;
+      --color-accent: #06b6d4;
+      --color-accent-light: #22d3ee;
+      --color-accent-dark: #0891b2;
+      --color-background: #f8fafc;
       --color-surface: #ffffff;
       --color-text: #1f2937;
       --color-text-light: #6b7280;
@@ -52,8 +52,8 @@
       max-width: 500px;
       margin: 0 auto;
       background: var(--color-surface);
-      border-radius: 8px;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      border-radius: 4px;
+      box-shadow: 0 1px 3px rgba(139, 92, 246, 0.1);
       border: 1px solid #e5e7eb;
       position: relative;
       overflow: hidden;
@@ -88,7 +88,7 @@
       display: inline-block;
       width: 40px;
       height: 40px;
-      border: 3px solid rgba(37, 99, 235, 0.2);
+      border: 3px solid rgba(139, 92, 246, 0.2);
       border-radius: 50%;
       border-top-color: var(--color-primary);
       animation: spin 1s ease-in-out infinite;
@@ -105,7 +105,7 @@
       height: 4px;
       width: 80%;
       margin: 0 auto;
-      background: rgba(37, 99, 235, 0.1);
+      background: rgba(139, 92, 246, 0.1);
       border-radius: 2px;
       overflow: hidden;
       position: relative;
